--- a/style-bulma.css
+++ b/style-bulma.css
@@ -2,26 +2,8 @@ html, body {
   height: 100%;
 }
 
-.wrapper {
-  min-height: 100%;
-}
-
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.center.column {
-  flex-direction: column;
-}
-
-.my-min {
-  min-width: 280px;
-}
-
-.item-text {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.max-width-370 {
+  max-width: 370px;
+  margin-left: auto;
+  margin-right: auto;
 }
