--- a/style.css
+++ b/style.css
@@ -1,19 +1,9 @@
-.container {
-  max-width: 400px;
+html, body {
+  height: 100%;
 }
 
-input[type=text],
-input[type=text]:focus {
-  color: #fff;
-  border: none;
-  background: rgba(0,0,0,0.2);
-  max-width: 400px;
-}
-
-.todos-container li {
-  background: #484E53;
-}
-
-.delete {
-  cursor: pointer;
+.max-width-370 {
+  max-width: 370px;
+  margin-left: auto;
+  margin-right: auto;
 }
